<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_custom_calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/b1"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:text="PREV"
            android:textColor="#0000ff" />

        <TextView
            android:id="@+id/display_current_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/current_date"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b2"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:text="NEXT"
            android:textColor="#0000ff" />
    </LinearLayout>

    <Button
        android:id="@+id/add_calendar_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:text="@string/add_event"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"

            android:text="@string/sun"
            android:textColor="#0000ff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="#0000ff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="#0000ff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="#0000ff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="#0000ff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="#0000ff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="#0000ff"
            android:textStyle="bold" />
    </LinearLayout>

    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7" />
</LinearLayout>